[package]
name = "imgshow"
version = "0.1.0"
authors = ["sunny <jinheking@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
opencv = {version = "0.52", default-features = false, features = ["opencv-34", "buildtime-bindgen"]}
